--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <img src="topbg.jpg" />
-        <video  class="video" src="Learn German： Will it rain today？.mp4" playsinline autoplay controls controlsList="nofullscreen" id=" Will it rain today？">
+        <video  class="video" src="Learn German： Will it rain today？.mp4" loop  webkit-playsinline playsinline autoplay controls controlsList="nofullscreen" id=" Will it rain today？">
         </video>
         <div class="vid-name-container">
             <p class="vid-name"></p>
